-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: tools
- relates to
-
JDK-8327231 [lworld] some javac tests are failing after making value objects a preview feature
-
- Resolved
-
-
JDK-8328150 [lworld] Adjust flags to "--enable-preview" clear out EnableValhalla and EnablePrimitiveClasses
-
- Resolved
-
-
JDK-8327836 [lworld] update java/lang/invoke/VarHandles tests with preview feature enabled
-
- Resolved
-